--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "server",
+  "name": "adaletb-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Backend server for Adalet Bakanlığı Tayin Sistemi",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
